# zero-to-hero

./: README.md
makemore/: .gitignore  bigram_counts.py  bigram_nn.py  mlp.py  performances.txt  pyproject.toml  wavenet.py
micrograd/: .gitignore  engine.py  nn.py  pyproject.toml  training.py
micrograd/tests/: test_engine.py  test_nn.py
micrograd/training/: core.py  moons.py  simple.py
minigpt/: .gitignore  bigram.py  blogpost.txt  dataloader.py  download_fineweb_edu.py  download_prepared_dataset.sh  finetune.py  finetuning-corpus.txt  generated-sample-finetuned.txt  generated-sample.txt  gpt2.py  minigpt.py  performances.txt  pyproject.toml  speeds.txt  tokenizer.py
minigpt/test-dataloader/: batch_0.npy  batch_1.npy  batch_2.npy  batch_3.npy  batch_4.npy  batch_5.npy  batch_6.npy  batch_7.npy  batch_8.npy  batch_9.npy
minigpt/tokenizer/: merges.json
minigpt/training-artifacts/: generated-sample-tokenizer.txt  generated-sample.txt
