[project]
name = "minigpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib<3.10",
    "numpy<2",
    "regex>=2024.11.6",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
    "torch<2.3.0",
    "tqdm>=4.67.1",
]
